// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FloatButton demos > demo: BackTopDemo 1`] = `
"<div style="height: 500vh; padding: 10px;">
  <div>Scroll to bottom</div>
  <div>Scroll to bottom</div>
  <div>Scroll to bottom</div>
  <div>Scroll to bottom</div>
  <div>Scroll to bottom</div>
  <div>Scroll to bottom</div>
  <div>Scroll to bottom</div><button type="button" class="ant-float-btn ant-float-btn-back-top ant-float-btn-default ant-float-btn-circle" style="display: none;">
    <div class="ant-float-btn-body">
      <div class="ant-float-btn-content">
        <div class="ant-float-btn-icon"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor" aria-hidden="true">
            <path d="M859.9 168H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zM518.3 355a8 8 0 00-12.6 0l-112 141.7a7.98 7.98 0 006.3 12.9h73.9V848c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V509.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 355z"></path>
          </svg></div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </button>
</div>"
`;

exports[`FloatButton demos > demo: Basic 1`] = `
"<button class="ant-float-btn ant-float-btn-default ant-float-btn-circle" type="button">
  <div class="ant-float-btn-body">
    <div class="ant-float-btn-content">
      <div class="ant-float-btn-icon"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</button>"
`;

exports[`FloatButton demos > demo: Group 1`] = `
"<div class="ant-float-btn-group ant-float-btn-group-circle ant-float-btn-group-open" style="right: 24px;">
  <div class="ant-float-btn-group-items"><button class="ant-float-btn ant-float-btn-default ant-float-btn-circle" type="button">
      <div class="ant-float-btn-body">
        <div class="ant-float-btn-content">
          <div class="ant-float-btn-icon"></div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </button><button class="ant-float-btn ant-float-btn-default ant-float-btn-circle" type="button">
      <div class="ant-float-btn-body">
        <div class="ant-float-btn-content">
          <div class="ant-float-btn-icon"></div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </button><button type="button" class="ant-float-btn ant-float-btn-back-top ant-float-btn-default ant-float-btn-circle" style="display: none;">
      <div class="ant-float-btn-body">
        <div class="ant-float-btn-content">
          <div class="ant-float-btn-icon"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor" aria-hidden="true">
              <path d="M859.9 168H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zM518.3 355a8 8 0 00-12.6 0l-112 141.7a7.98 7.98 0 006.3 12.9h73.9V848c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V509.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 355z"></path>
            </svg></div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </button></div>
  <!--v-if-->
</div>
<div class="ant-float-btn-group ant-float-btn-group-square ant-float-btn-group-open" style="right: 94px;">
  <div class="ant-float-btn-group-items"><button class="ant-float-btn ant-float-btn-default ant-float-btn-circle" type="button">
      <div class="ant-float-btn-body">
        <div class="ant-float-btn-content">
          <div class="ant-float-btn-icon"></div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </button><button class="ant-float-btn ant-float-btn-default ant-float-btn-circle" type="button">
      <div class="ant-float-btn-body">
        <div class="ant-float-btn-content">
          <div class="ant-float-btn-icon"></div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </button><button class="ant-float-btn ant-float-btn-default ant-float-btn-circle" type="button">
      <div class="ant-float-btn-body">
        <div class="ant-float-btn-content">
          <div class="ant-float-btn-icon"></div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </button><button type="button" class="ant-float-btn ant-float-btn-back-top ant-float-btn-default ant-float-btn-circle" style="display: none;">
      <div class="ant-float-btn-body">
        <div class="ant-float-btn-content">
          <div class="ant-float-btn-icon"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor" aria-hidden="true">
              <path d="M859.9 168H164.1c-4.5 0-8.1 3.6-8.1 8v60c0 4.4 3.6 8 8.1 8h695.8c4.5 0 8.1-3.6 8.1-8v-60c0-4.4-3.6-8-8.1-8zM518.3 355a8 8 0 00-12.6 0l-112 141.7a7.98 7.98 0 006.3 12.9h73.9V848c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V509.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 355z"></path>
            </svg></div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`FloatButton demos > demo: Shape 1`] = `
"<button class="ant-float-btn ant-float-btn-default ant-float-btn-circle" type="button">
  <div class="ant-float-btn-body">
    <div class="ant-float-btn-content">
      <div class="ant-float-btn-icon"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</button>
<button class="ant-float-btn ant-float-btn-primary ant-float-btn-circle" type="button" style="right: 94px;">
  <div class="ant-float-btn-body">
    <div class="ant-float-btn-content">
      <div class="ant-float-btn-icon"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</button>
<button class="ant-float-btn ant-float-btn-primary ant-float-btn-square" type="button" style="right: 24px;">
  <div class="ant-float-btn-body">
    <div class="ant-float-btn-content">
      <div class="ant-float-btn-icon"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</button>"
`;

exports[`FloatButton demos > demo: Tooltip 1`] = `
"<button class="ant-float-btn ant-float-btn-default ant-float-btn-circle" title="HELP INFO" type="button" style="right: 24px;">
  <div class="ant-float-btn-body">
    <div class="ant-float-btn-content">
      <div class="ant-float-btn-icon"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</button>
<button class="ant-float-btn ant-float-btn-default ant-float-btn-circle" type="button" style="right: 94px;">
  <div class="ant-float-btn-body">
    <div class="ant-float-btn-content">
      <div class="ant-float-btn-icon"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</button>"
`;
